--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,15 @@ asyncio==3.4.3
 typing-extensions==4.9.0
 uvicorn
 fastapi
-pymilvus==2.3.4
+pymilvus==2.4.0
+pymilvus[model]
 numpy==1.26.2
 requests==2.31.0
+ollama
+FlagEmbedding==0.3.1
+langchain
+llama-index
+langfuse
+wandb
+torch
+transformers
